tests/agl/rejections/parse/duplicate_call_option.agl
let x: json = ask("Question.", strict_json: true, strict_json: true)
x
